--- a/appsettings.json
+++ b/appsettings.json
@@ -2,9 +2,10 @@
   "Settings": {
     "NotifyMethod": "Telegram",
     "MempoolApiUrl": "http://mempool.space/api/v1",
+    "ApiPollFrequencySeconds": "5",
     "EconomyRateThreshold": "20",
     "NotifyRepeatFrequencyMinutes": "1",
-    "TelegramBotToken": "5621952976:AAH8aYA_G6bkwCudpTouiSLorK75NTGWnbE",
+    "TelegramBotToken": "XXXXXXXXXXX",
     "SmtpServer": "smtp.gmail.com",
     "SmtpUser": "test@gmail.com",
     "SmtpPass": "auth token here",
