Updates to dynamic Notifier and settings classes with DI. Index page for editing/viewing some settings (WIP)

--- a/MempoolBot.Lib/MempoolBot.Lib.csproj
+++ b/MempoolBot.Lib/MempoolBot.Lib.csproj
@@ -5,15 +5,28 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <DockerComposeProjectPath>docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>98308bd7-7a15-47f8-8d07-37aa7b796819</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="Telegram.Bot" Version="19.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Notifications\Telegram\" />
+    <None Remove="Notifications\Email\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="src\appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Notifications\Telegram\" />
+    <Folder Include="Notifications\Email\" />
   </ItemGroup>
 </Project>
